--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,38 +1,49 @@
 ---
-// Component Imports
-import Button from '../components/Button.astro';
+import Button from "../components/Button.astro";
 
 const fetchData = async () => {
-	try {
-		const response = await fetch('http://localhost:4321/api/notion');
-		const data = await response.json();		
-		// Process the data here
-		return data;
-	} catch (error) {
-		console.error('Error fetching data:', error);
-	}
+  try {
+    const response = await fetch("http://localhost:4321/api/notion");
+    const data = await response.json();
+    // Process the data here
+    return data;
+  } catch (error) {
+    console.error("Error fetching data:", error);
+  }
 };
-
 const data = await fetchData();
-
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro + TailwindCSS</title>
-	</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro + TailwindCSS</title>
+  </head>
 
-	<body>
-		<div class="grid place-items-center h-screen content-center">
-			<Button>Tailwind Button in Astro!</Button>
-			<a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
-		</div>
-		<div>
-			{data?.map((item) => <img class="w-64 aspect-square object-cover" src={item.properties.image.files[0].external.url}/>)}
-		</div>
-	</body>
+  <body>
+    <div class="grid place-items-center h-screen content-center">
+      <Button>Tailwind Button in Astro!</Button>
+      <a href="/markdown-page" class="p-4 underline"
+        >Markdown is also supported...</a
+      >
+    </div>
+    <div class="grid items-start gap-3">
+      {
+        data?.map((item: any) => (
+          <div class="flex">
+            <h2>{item.properties.Name.title[0].plain_text}</h2>
+            <img
+              class="w-64 aspect-square object-cover"
+              src={item.properties.image.files[0].external.url}
+            />
+            <p>{item.properties.Content.rich_text[0].plain_text}</p>
+            <p>URL: {item.properties.Link.url}</p>
+          </div>
+        ))
+      }
+    </div>
+  </body>
 </html>
